# Fire

./: .gitignore  CMakeLists.txt  ECOGEN.xml  LICENSE.txt  README.md
example_cases/1D_H2-Air_deflagration/: CMakeLists.txt  config.sh  plot_1D_deflagration.py  run.sh
example_cases/1D_H2-Air_deflagration/input_files/: initialConditionsV4.xml  mainV5.xml  meshV5.xml  modelV4.xml
example_cases/1D_detonation/: plot_1D_deton.py  run.sh
example_cases/1D_detonation/input_files/: initialConditionsV4.xml  mainV5.xml  meshV5.xml  modelV4.xml
example_cases/2D_Channel_detonation_1/input_files/: Singh2001_NASA9.yaml  initialConditionsV4.xml  mainV5.xml  meshV5.xml
example_cases/2D_Channel_detonation_2/input_files/: meshV5.xml
example_cases/2D_ISBI_Case_1/input_files/: mainV5.xml  meshV5.xml
example_cases/2D_ISBI_Case_2/: run.sh
example_cases/2D_ISBI_Case_2/input_files/: mainV5.xml  meshV5.xml
example_cases/2D_ISBI_Case_3/input_files/: mainV5.xml  meshV5.xml
example_cases/2D_ISBI_Case_4/input_files/: mainV5.xml  meshV5.xml  modelV4.xml
example_cases/2D_ISBI_Case_5/: CMakeLists.txt  config.sh
example_cases/2D_ISBI_Case_5/input_files/: mainV5.xml  meshV5.xml
example_cases/2D_RSBI/input_files/: Conaire_2004-10.yaml  initialConditionsV4.xml  mainV5.xml  meshV5.xml  modelV4.xml
example_cases/3D_channel_detonation/: CMakeLists.txt  config.sh
example_cases/3D_channel_detonation/input_files/: initialConditionsV4.xml  mainV5.xml  meshV5.xml  modelV4.xml
libTests/Channel_detonation_2D/: Singh2001_NASA9.cti  initialConditionsV4.xml  mainV5.xml  meshV5.xml  modelV4.xml
libTests/Detonation_1D/: initialConditionsV4.xml  meshV5.xml  modelV4.xml
libTests/ISBI_axisymmetric/: SF6_air.yaml  initialConditionsV4.xml  mainV5.xml  meshV5.xml  modelV4.xml
libTests/RSBI_2D/: mainV5.xml  meshV5.xml  modelV4.xml
results/Detonation_1D_post-process/: plot_1D_against_reference.py  plot_time.py
src/: main.cpp
src/Inviscid/: ModFire.cpp  ModFire.h
src/Mixture/: EosTPIG.cpp  EosTPIG.h  FluxFire.cpp  FluxFire.h  MixFire.cpp  MixFire.h  PhaseFire.cpp  PhaseFire.h
src/Sources/: SourceReaction.cpp  SourceReaction.h
src/Viscous/: APFire.cpp  APFire.h  ViscousParallel.cpp
src/Viscous/DiffusionEffects/: APFireDiffusion.cpp  APFireDiffusion.h  QAPFireDiffusion.cpp  QAPFireDiffusion.h
src/include/: Cell.cpp  CellInterface.cpp  CellO2.cpp  Fire.cpp  Fire.h  Input.cpp  Run.cpp  readThermo.cpp  readThermo.h
src/libs/ECOGEN/: Run.cpp  Run.h
src/libs/ECOGEN/AdditionalPhysics/: AddPhys.cpp  AddPhys.h  HeaderAddPhys.h  HeaderQuantitiesAddPhys.h  QuantitiesAddPhys.h
src/libs/ECOGEN/BoundConds/: BoundCond.cpp  BoundCond.h  BoundCondInlet.cpp  BoundCondInlet.h  HeaderBoundCond.h
src/libs/ECOGEN/Eos/: Eos.h  HeaderEquationOfState.h
src/libs/ECOGEN/Geometries/: GDDisc.cpp  GDDisc.h  GDHalfSpace.cpp  GDHalfSpace.h  GDSphere.cpp  GDSphere.h  GeometricalDomain.cpp  GeometricalDomain.h
src/libs/ECOGEN/InputOutput/: Input.cpp  Input.h  Output.h  OutputCutGNU.cpp  OutputCutGNU.h  OutputGNU.h  OutputXML.cpp
src/libs/ECOGEN/Meshes/: Mesh.cpp  Mesh.h  MeshCartesian.cpp  MeshCartesianAMR.cpp  MeshCartesianAMR.h
src/libs/ECOGEN/Models/: Flux.h  HeaderModel.h  HeaderPhase.h  Mixture.cpp  Mixture.h  Model.cpp  Model.h  Phase.h
src/libs/ECOGEN/Order1/: Cell.cpp  Cell.h  CellInterface.cpp  CellInterface.h
src/libs/ECOGEN/Order2/: CellInterfaceO2.cpp  CellO2.cpp  CellO2.h  CellO2Ghost.cpp  LimiterVanLeer.cpp
src/libs/ECOGEN/Parallel/: Parallel.cpp  Parallel.h
src/libs/ECOGEN/Sources/: HeaderSources.h  Source.cpp  Source.h  SourceGravity.cpp  SourceGravity.h  SourceHeating.cpp  SourceHeating.h  SourceMRF.cpp  SourceMRF.h
src/libs/ECOGEN/Symmetries/: SymCylindrical.cpp  SymSpherical.cpp  Symmetry.cpp  Symmetry.h
